feat: basic interface to hand off to restic
