# yucca-api/src/app.module.ts
@@ -6,16 +6,19 @@ import { JwtModule } from '@nestjs/jwt';
 import { KyselyModule } from 'nestjs-kysely';
 import { AppController } from './controllers/app.controller';
 import { AuthController } from './controllers/auth.controller';
+import { RepositoryController } from './controllers/repository.controller';
 import { AuthGuard } from './middleware/auth.guard';
 import { CryptoRepository } from './repositories/crypto.repository';
 import { DatabaseRepository } from './repositories/database.repository';
 import { DummyRepository } from './repositories/dummy.repository';
 import { OidcRepository } from './repositories/oidc.repository';
+import { RepositoryRepository } from './repositories/repository.repository';
 import { SessionRepository } from './repositories/session.repository';
 import { UserRepository } from './repositories/user.repository';
 import { AppService } from './services/app.service';
 import { AuthService } from './services/auth.service';
 import { DatabaseService } from './services/database.service';
+import { RepositoryService } from './services/repository.service';
 import { getKyselyConfig } from './utils/database';
 
 @Module({
@@ -27,7 +30,7 @@ import { getKyselyConfig } from './utils/database';
     }),
     KyselyModule.forRoot(getKyselyConfig()),
   ],
-  controllers: [AppController, AuthController],
+  controllers: [AppController, AuthController, RepositoryController],
   providers: [
     WideContextRepository,
     LoggerRepository,
@@ -35,9 +38,11 @@ import { getKyselyConfig } from './utils/database';
     CryptoRepository,
     OidcRepository,
     UserRepository,
+    RepositoryRepository,
     SessionRepository,
     DummyRepository,
     DatabaseService,
+    RepositoryService,
     AppService,
     AuthService,
     { provide: APP_INTERCEPTOR, useClass: LoggingInterceptor },
